--- a/app/src/main/resources/index.html
+++ b/app/src/main/resources/index.html
@@ -6,5 +6,7 @@
 </head>
 <body>
 <script src="app.js"></script>
+<link href="main.css" rel="stylesheet" type="text/css" media="all">
+
 </body>
 </html>
